Fix HTML formatting and update footer date

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
   
 
   <footer>
-    <p>© Made with Luv & Zebronics K65 wired keyboard — Last updated:li8 Jan 2026</p>
+    <p>© Made with Luv & Zebronics K65 wired keyboard — Last updated: 28 Jan 2026</p>
   </footer>
 
 </body>
 </html>
+
